--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "major-concept-react-js",
+  "name": "react-all-concept",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.8.1",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.4"
+    "react-router-dom": "^7.2.0",
+    "reactstrap": "^9.2.3",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
